name:                t3gbLz
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/t3gbLz#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable t3gbLz
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, bytestring, binary, split, stringsearch
  ghc-options:         -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
